...

# pragma mark - 初始化名字输入
- (UITextField*)nameTextFiled {
    if (!_nameTextFiled) {
        _nameTextFiled = [[UITextField alloc] init]; // 构造
        _nameTextFiled.backgroundColor = [UIColor whiteColor]; // 背景
        _nameTextFiled.placeholder = @"Enter full name"; // 提示
        _nameTextFiled.layer.cornerRadius = 20; // 圆角
        _nameTextFiled.layer.masksToBounds = YES;
        _nameTextFiled.font = [UIFont systemFontOfSize:14]; // 字体
        _nameTextFiled.leftView = [[UIView alloc] initWithFrame:CGRectMake(0, 0, 20, 50)]; // 左边间隙
        _nameTextFiled.leftViewMode = UITextFieldViewModeAlways; // 左边间隙一直显示
        _nameTextFiled.clearButtonMode = UITextFieldViewModeWhileEditing; // 删除键
...

# pragma mark - 初始化邮箱
- (UITextField*)emailTextFiled {
    if (!_emailTextFiled) {
        _emailTextFiled = [[UITextField alloc] init]; // 构造
        _emailTextFiled.backgroundColor = [UIColor whiteColor]; // 背景
        _emailTextFiled.placeholder = @"Enter email"; // 提示
        _emailTextFiled.layer.cornerRadius = 20; // 圆角
        _emailTextFiled.layer.masksToBounds = YES;
        _emailTextFiled.font = [UIFont systemFontOfSize:14]; // 字体
        _emailTextFiled.leftView = [[UIView alloc] initWithFrame:CGRectMake(0, 0, 20, 50)]; // 左边间隙
        _emailTextFiled.leftViewMode = UITextFieldViewModeAlways; // 左边间隙一直显示
        _emailTextFiled.clearButtonMode = UITextFieldViewModeWhileEditing; // 删除键
...

# pragma mark - 初始化密码
- (UITextField*)passwordTextFiled {
    if (!_passwordTextFiled) {
        _passwordTextFiled = [[UITextField alloc] init]; // 构造
        _passwordTextFiled.backgroundColor = [UIColor whiteColor]; // 背景
        _passwordTextFiled.placeholder = @"Enter password"; // 提示
        _passwordTextFiled.layer.cornerRadius = 20; // 圆角
        _passwordTextFiled.layer.masksToBounds = YES;
        _passwordTextFiled.font = [UIFont systemFontOfSize:14]; // 字体
        _passwordTextFiled.leftView = [[UIView alloc] initWithFrame:CGRectMake(0, 0, 20, 50)]; // 左边间隙
        _passwordTextFiled.leftViewMode = UITextFieldViewModeAlways; // 左边间隙一直显示
        _passwordTextFiled.clearButtonMode = UITextFieldViewModeWhileEditing; // 删除键
...

# pragma mark - 初始化注册
- (UIButton*)registerButton {
    if (!_registerButton) {
        _registerButton = [UIButton buttonWithType:UIButtonTypeSystem];
        _registerButton.backgroundColor = [UIColor colorWithRed:0.8 green:0 blue:0.3 alpha:1]; // 背景
        [_registerButton setTitle:@"Register" forState:UIControlStateNormal]; // 正常状态
        [_registerButton setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal]; // 颜色
        _registerButton.titleLabel.font = [UIFont systemFontOfSize:15 weight:1]; // 字体、加粗
        _registerButton.layer.cornerRadius = 20; // 圆角
        _registerButton.layer.masksToBounds = YES;
        
        _registerButton.tag = 1;
...
