...
}

# pragma mark - 左按键
- (UIButton*)leftBtn {
    if (!_leftBtn) {
        _leftBtn = [UIButton buttonWithType:UIButtonTypeCustom]; // 自定义类型
        [_leftBtn setImage:[UIImage imageNamed:@"navLeftImg"] forState:UIControlStateNormal]; // 背景
        
        _leftBtn.tag = 1;
        [_leftBtn addTarget:self action:@selector(clickButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _leftBtn;
}

# pragma mark - 右按键
- (UIButton*)rightBtn {
    if (!_rightBtn) {
        _rightBtn = [UIButton buttonWithType:UIButtonTypeCustom];
        [_rightBtn setImage:[UIImage imageNamed:@"navRightImg"] forState:UIControlStateNormal];
        _rightBtn.tag = 2;
        [_rightBtn addTarget:self action:@selector(clickButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _rightBtn;
}

...
